--- a/app/composer.json
+++ b/app/composer.json
@@ -19,6 +19,7 @@
         "liyu/dingo-serializer-switch": "^0.3.1",
         "overtrue/easy-sms": "^1.1",
         "overtrue/wechat": "^4.1",
+        "socialiteproviders/weixin": "^4.0",
         "spatie/laravel-permission": "^2.36",
         "symfony/psr-http-message-bridge": "^1.2",
         "tymon/jwt-auth": "1.0.0-rc.4.1"
