--- a/app/composer.json
+++ b/app/composer.json
@@ -23,7 +23,8 @@
         "socialiteproviders/weixin": "^4.0",
         "spatie/laravel-permission": "^2.36",
         "symfony/psr-http-message-bridge": "^1.2",
-        "tymon/jwt-auth": "1.0.0-rc.4.1"
+        "tymon/jwt-auth": "1.0.0-rc.4.1",
+        "viacreative/sudo-su": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
