--- a/app/composer.json
+++ b/app/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^1.0",
         "liyu/dingo-serializer-switch": "^0.3.1",
         "overtrue/easy-sms": "^1.1",
+        "overtrue/pinyin": "^4.0",
         "overtrue/wechat": "^4.1",
         "socialiteproviders/weixin": "^4.0",
         "spatie/laravel-permission": "^2.36",
